[package]
name = "yarrp_toolkit"
version = "0.1.0"
authors = ["Markus Maier <mmaier@sba-research.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yarrp_toolkit"
path = "src/yarrp_toolkit/lib.rs"

[dependencies]
clap = { version = "~2.33.3", features = ["yaml"] }
tokio = { version = "*", features = ["full"] }
elasticsearch = "7.11.0-alpha.1"
ipnet = { version = "2.3.0", features = ["serde"] }
itertools = "0.10.0"
pbr = "1.0.4"
serde = "1.0.123"
serde_json = "1.0.64"
log = "0.4"
env_logger = "0.8"
md-5 = "*"
csv = "*"
rand = "0.8.4"
rand_pcg = "0.3.0"
glob = "0.3.0"
serde_derive = "1.0.126"

[profile.release]
debug = true

[[bin]]
name = "yarrp_toolkit"
test = false
doc = false
